--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -6,7 +6,7 @@
 .nav-list {
   list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 .nav-link {
   padding: 1rem;
@@ -23,7 +23,5 @@
 }
 
 @media (min-width: 600px) {
-  .nav-list {
-    justify-content: center;
-  }
+  
 }
